@@ -134,7 +134,7 @@
 
     <% cache_expiring("sidebar_recently", 300) do %>
       <div class="sidebar_secions">
-        <h4>Recently Commented</h4>
+        <h4>Recently Discussed</h4>
         <% Item.recently_commented(5).each do |item| %>
           <div class="sidebar-item">
             <%= item_mini(item).html_safe %>
@@ -151,7 +151,7 @@
     <% cache_expiring("sidebar_most_read", 600) do %>
       <div class="sidebar_secions">
         <h4>Most Read in 2 weeks</h4>
-        <% Item.popular(3).each do |item| %>
+        <% Item.popular(5).each do |item| %>
           <div class="sidebar-item">
             <%= item_mini(item).html_safe %>
             <span class="horizontal-divider"></span>
