@@ -1,5 +1,8 @@
 CHANGELOG
 
+== July 12, 2012
+* Changed sidebar from 3 to 5 Top items
+
 == July 9, 2012
 * Allow Quote and italic tags on comments
 * Updated Gems
